cmake_minimum_required(VERSION 3.20)
project(OutputDoc)

set(CMAKE_CXX_STANDARD 14)

include_directories(vimCode/deriveBase)
include_directories(vimCode/operatorOverload)
include_directories(vimCode/stock)
include_directories(vimCode/String)
include_directories(vimCode/tempOverload)
include_directories(vimCode/test)

add_executable(OutputDoc
        vimCode/dataStructure/designLinkedList.cpp
        vimCode/dataStructure/reverseLinkedList.cpp
        vimCode/deriveBase/deriveBase.cpp
        vimCode/deriveBase/tableTennis.cpp
        vimCode/deriveBase/tableTennis.h
        vimCode/leetcode/midNum_lc.cpp
        vimCode/leetcode/subsets_lc.cpp
        vimCode/modernCPlusPlus/inltializer.cpp
        vimCode/modernCPlusPlus/iteratorT.cpp
        vimCode/modernCPlusPlus/smartPointer.cpp
        vimCode/modernCPlusPlus/strAbolish.cpp
        vimCode/modernCPlusPlus/stringChar.cpp
        vimCode/modernCPlusPlus/trailAuto.cpp
        vimCode/OpenGL/examGlfw.cpp
        vimCode/OpenGL/glad.c
        vimCode/OpenGL/OpenGL.c
        vimCode/OpenGL/OpenGLLight.c
        vimCode/OpenGL/OpenGLPlanet.c
        vimCode/OpenGL/OpenGLsin.c
        vimCode/OpenGL/test.cpp
        vimCode/operatorOverload/mytime.cpp
        vimCode/operatorOverload/mytime.h
        vimCode/operatorOverload/usetime.cpp
        vimCode/stock/stock.cpp
        vimCode/stock/stock.h
        vimCode/stock/stockImp.cpp
        vimCode/String/string1.cpp
        vimCode/String/string1.h
        vimCode/String/useString.cpp
        vimCode/tempOverload/Swap.h
        vimCode/tempOverload/tempSwap.cpp
        vimCode/test/book.cpp
        vimCode/test/capacity.cpp
        vimCode/test/charxx.cpp
        vimCode/test/constCast.cpp
        vimCode/test/defineE.cpp
        vimCode/test/delRe.cpp
        vimCode/test/forkPrint.cpp
        vimCode/test/funcPointer.cpp
        vimCode/test/hello.cpp
        vimCode/test/hello.h
        vimCode/test/isCube.cpp
        vimCode/test/left.cpp
        vimCode/test/lyzVec.cpp
        vimCode/test/multiDerive.cpp
        vimCode/test/play.cpp
        vimCode/test/quote.cpp
        vimCode/test/staticVariable.cpp
        vimCode/test/stdString.cpp
        vimCode/test/vectorCmp.cpp
        vimCode/test/yuv.cpp)
